--- a/store.html
+++ b/store.html
@@ -50,7 +50,7 @@
             <div class="shop-items">
                 <div class="shop-item">
                     <span class="shop-item-title">Audemars Piguet Royal Oak Black Dial</span>
-                    <img class="shop-item-image" src="https://img.chrono24.com/images/uhren/25754319-1bczf4dwcsb01m6lj6ardsou-ExtraLarge.jpg">
+                    <img class="shop-item-image" src="https://img.chrono24.com/images/uhren/25754319-1bczf4dwcsb01m6lj6ardsou-ExtraLarge.jpg" alt="AudemarsPiguet1">
                     <div class="shop-item-details">
                         <span class="shop-item-price">$88900</span>
                         <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
