--- a/store.html
+++ b/store.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Time Piece</title>
-        <link rel="stylesheet" href="styles.css" />
+        <link rel="stylesheet" href="styles.css">
         <script src="store.js" async></script>
     </head>
     <body>
