--- a/store.html
+++ b/store.html
@@ -16,7 +16,7 @@
             <h1 class="store-name store-name-large">Time Piece</h1>
         </header>
 		<br>
-		<h1><center>Featured</center></h1>
+		<h1 style="text-align:center;">Featured</h1>
 		<br>
 <div class="slideshow-container">
   <div class="mySlides fade">
